# Collok_2

./: CMakeLists.txt  Collok_2.cpp  handler.cpp  handler.h  httplib.h  json.hpp  main.cpp  queue.cpp  queue.h  task.cpp  task.h
